@@ -9,10 +9,14 @@ import com.UniTime.UniTime.service.ScheduleService;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
 
+import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,54 +30,60 @@ public class ScheduleServiceImpl implements ScheduleService {
     private final ModelMapper mapper;
 
     // Create schedule
-    @Override
-    public ScheduleDto postSchedule(ScheduleDto scheduleDto) {
-        // Convert DTO to Entity
-        Schedule schedule = mapper.map(scheduleDto, Schedule.class);
 
-        // Check if the room is provided in the DTO and set it
+
+    @Override
+    public ScheduleDto postSchedule(ScheduleDto scheduleDto, MultipartFile image) throws IOException {
+        // Convert DTO to Entity
+        Schedule schedule = scheduleDto.toEntity(mapper);
+
+        // Handle Image
+        if (image != null && !image.isEmpty()) {
+            schedule.setImageData(image.getBytes());
+        }
+
+        // Set Room
         if (scheduleDto.getRoom() != null && scheduleDto.getRoom().getId() != null) {
             Room room = roomRepository.findById(scheduleDto.getRoom().getId())
                     .orElseThrow(() -> new NotFoundException("Room not found with id: " + scheduleDto.getRoom().getId()));
-            schedule.setRoom(room); // Set the room in the schedule
+            schedule.setRoom(room);
         }
 
-        //  Set Professor
+        // Set Professor
         if (scheduleDto.getProfessor() != null && scheduleDto.getProfessor().getId() != null) {
             Professor professor = professorRepository.findById(scheduleDto.getProfessor().getId())
                     .orElseThrow(() -> new NotFoundException("Professor not found with id: " + scheduleDto.getProfessor().getId()));
             schedule.setProfessor(professor);
         }
 
-        // set Course
+        // Set Course
         if (scheduleDto.getCourse() != null && scheduleDto.getCourse().getCourseId() != null) {
             Course course = courseRepository.findById(scheduleDto.getCourse().getCourseId())
-                    .orElseThrow(() -> new NotFoundException("Course not found with id: " + scheduleDto.getProfessor().getId()));
+                    .orElseThrow(() -> new NotFoundException("Course not found with id: " + scheduleDto.getCourse().getCourseId()));
             schedule.setCourse(course);
         }
-        //set schedule and user many to many
+
+        // Set Users
         if (scheduleDto.getUsers() != null && !scheduleDto.getUsers().isEmpty()) {
             List<User> attendees = new ArrayList<>();
             for (UserDto ud : scheduleDto.getUsers()) {
-                if (ud.getId() == null) {
-                    throw new IllegalArgumentException("User ID is required to enroll in schedule.");
-                }
-                // fetch the existing User
                 User user = userRepository.findById(ud.getId())
                         .orElseThrow(() -> new NotFoundException("User not found with id: " + ud.getId()));
                 attendees.add(user);
-
-                // maintain inverse side
-                user.getSchedules().add(schedule);
+                user.getSchedules().add(schedule); // maintain inverse side
             }
             schedule.setUsers(attendees);
         }
 
-        // Save the schedule entity
+        // Save and return
         Schedule savedSchedule = scheduleRepository.save(schedule);
+        ScheduleDto savedDto = savedSchedule.toDto(mapper);
 
-        // Return the saved schedule as a DTO (includes room details)
-        return mapper.map(savedSchedule, ScheduleDto.class);
+        if (savedSchedule.getImageData() != null) {
+            savedDto.setImageBase64(Base64.getEncoder().encodeToString(savedSchedule.getImageData()));
+        }
+
+        return savedDto;
     }
 
 
@@ -81,12 +91,12 @@ public class ScheduleServiceImpl implements ScheduleService {
     @Override
     public List<ScheduleDto> getAllSchedules() {
         List<Schedule> schedules = scheduleRepository.findAll();
-        if (schedules.isEmpty()) {
-            return new ArrayList<>();
-        } else {
-            return schedules.stream().map(schedule -> schedule.toDto(mapper)).toList();
-        }
+        return schedules.stream()
+                .map(schedule -> schedule.toDto(mapper))
+                .collect(Collectors.toList());
     }
+
+
 
     // Get schedule by id
     @Override
